--- a/javascript/score-golf/score_app.html
+++ b/javascript/score-golf/score_app.html
@@ -17,8 +17,11 @@
     text-align: left;
     font-size: 30px;
     font-weight: bold;
+    margin: -5px;
     padding: 20px;
+    padding-top:10px;
     color: rgba(236,236,236,1);
+    background-color: #242a30;
     font-family:'Oswald', sans-serif;
     text-transform: uppercase;
   }
