--- a/javascript/score-golf/score_app.html
+++ b/javascript/score-golf/score_app.html
@@ -363,7 +363,7 @@
 </script>
 
 <div id="title">
-  <span style="">Golf Courses of Canada</span>
+  <span style="">Golf Courses of Canada</span><img id="filterIMG" src="https://dl.dropbox.com/s/synif6qrlgxblwp/golf-ball.png?dl=0" width="16" height="16">
 </div>
 
 <div class="flexouter">
