--- a/javascript/hex-map/provincial-stats/hex_prov_map.html
+++ b/javascript/hex-map/provincial-stats/hex_prov_map.html
@@ -29,17 +29,16 @@
   #chartdiv{
     position: relative;
     margin: 0 auto;
-    height: 60vh;
+    height: 400px;
     flex: 1 1 auto;
     width: 80%;
   }
   #chartdiv2{
     position: relative;
     margin: 0 auto;
-    height: 40vh;
+    height: 200px;
     flex: 1 1 auto;
     width: 80%;
-    margin-top: -80px;
   }
 
   /* ---------------------- */
