--- a/javascript/hex-map/provincial-stats/hex_prov_map.html
+++ b/javascript/hex-map/provincial-stats/hex_prov_map.html
@@ -36,7 +36,7 @@
   #chartdiv2{
     position: relative;
     margin: 0 auto;
-    height: 200px;
+    height: 30vh;
     flex: 1 1 auto;
     width: 80%;
   }
