--- a/javascript/hex-map/provincial-stats/hex_prov_map.html
+++ b/javascript/hex-map/provincial-stats/hex_prov_map.html
@@ -29,16 +29,17 @@
   #chartdiv{
     position: relative;
     margin: 0 auto;
-    height: 400px;
+    height: 60vh;
     flex: 1 1 auto;
     width: 80%;
   }
   #chartdiv2{
     position: relative;
     margin: 0 auto;
-    height: 30vh;
+    height: 40vh;
     flex: 1 1 auto;
     width: 80%;
+    margin-top: -80px;
   }
 
   /* ---------------------- */
@@ -162,8 +163,8 @@
     border: none;
     cursor: pointer;
     width:100%;
-    min-width: 100px;
-    max-width: 100px;
+    min-width: 80px;
+    max-width: 80px;
     border-radius: 4px;
     box-shadow: 0px 3px 5px 0.5px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 3px 5px 0.5px rgba(0,0,0,0.75);
@@ -181,7 +182,7 @@
     position: absolute;
     background-color: rgba(159,211,199,0.7);
     min-width: 100%;
-    max-width: 100px;
+    max-width: 80px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: -1;
     font-size: 10px;
