--- a/javascript/hex-map/provincial-stats/hex_prov_map.html
+++ b/javascript/hex-map/provincial-stats/hex_prov_map.html
@@ -220,6 +220,9 @@
       #chartdiv, #chartdiv2 {
         width: 90vw;
       }
+      #chartdiv {
+        height: 40vh;
+      }
 
     }
     /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
