--- a/javascript/hex-map/provincial-stats/hex_prov_map.html
+++ b/javascript/hex-map/provincial-stats/hex_prov_map.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Provincial Statistics - Canada</title>
 </head>
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -29,16 +30,17 @@
   #chartdiv{
     position: relative;
     margin: 0 auto;
-    height: 400px;
+    height: 55vh;
     flex: 1 1 auto;
     width: 80%;
   }
   #chartdiv2{
     position: relative;
     margin: 0 auto;
-    height: 250px;
+    height: 40vh;
     flex: 1 1 auto;
     width: 80%;
+    margin-top: -60px;
   }
 
   /* ---------------------- */
