--- a/javascript/hex-map/provincial-stats/hex_prov_map.html
+++ b/javascript/hex-map/provincial-stats/hex_prov_map.html
@@ -221,6 +221,7 @@
       #chartdiv, #chartdiv2 {
         width: 90vw;
       }
+      #title {font-size: 22px;}
 
     }
     /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
