--- a/javascript/hex-map/broadband-access/hex_broadband_map.html
+++ b/javascript/hex-map/broadband-access/hex_broadband_map.html
@@ -154,6 +154,11 @@
         width: 90vw;
         margin-top: -150px;
       }
+      .prov_btn {
+        height: 30px;
+        min-width: 40px;
+        max-width: 40px;
+      }
 
     }
     /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
