--- a/javascript/hex-map/broadband-access/hex_broadband_map.html
+++ b/javascript/hex-map/broadband-access/hex_broadband_map.html
@@ -153,6 +153,7 @@
       #chartdiv {
         width: 90vw;
         margin-top: -150px;
+        z-index: -10;
       }
       .prov_btn {
         height: 30px;
