--- a/javascript/hex-map/broadband-access/hex_broadband_map.html
+++ b/javascript/hex-map/broadband-access/hex_broadband_map.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <title>Golf Courses of Canada</title>
+  <title>Broadband Access in Canada</title>
 </head>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
